--- a/package.json
+++ b/package.json
@@ -6,7 +6,9 @@
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "eject": "react-scripts eject",
+    "cy:run": "npx cypress run --browser chrome",
+    "cy:open": "npx cypress open"
   },
   "dependencies": {
     "@emotion/react": "^11.13.3",
@@ -39,6 +41,7 @@
     "@testing-library/user-event": "^14.5.2",
     "@types/react-i18next": "^8.1.0",
     "@types/styled-components": "^5.1.34",
+    "cypress": "^13.15.2",
     "eslint": "^8.57.1",
     "eslint-config-prettier": "^9.1.0",
     "eslint-plugin-prettier": "^5.2.1",
