--- a/package.json
+++ b/package.json
@@ -8,7 +8,9 @@
     "test": "react-scripts test",
     "eject": "react-scripts eject",
     "cy:run": "npx cypress run --browser chrome",
-    "cy:open": "npx cypress open"
+    "cy:open": "npx cypress open",
+    "lint": "eslint .",
+    "lint:fix": "eslint --fix --ext .js,.jsx ."
   },
   "dependencies": {
     "@emotion/react": "^11.13.3",
@@ -41,18 +43,13 @@
     "@types/react-i18next": "^8.1.0",
     "@types/styled-components": "^5.1.34",
     "cypress": "^13.15.2",
-    "eslint": "^8.57.1",
+  
     "eslint-config-prettier": "^9.1.0",
+    "eslint-config-react-app": "^7.0.1",
     "eslint-plugin-prettier": "^5.2.1",
     "jest-styled-components": "^7.2.0",
     "lint-staged": "^15.2.10",
     "prettier": "^3.3.3"
-  },
-  "eslintConfig": {
-    "extends": [
-      "react-app",
-      "react-app/jest"
-    ]
   },
   "browserslist": {
     "production": [
